--- a/index.html
+++ b/index.html
@@ -451,6 +451,20 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <p class="subscribe-title">Subscribe</p>
+          <form class="form-subscribe" autocomplete="off">
+            <label>
+              <input class="subscribe-input" name="E-mail"  placeholder="E-mail" type="email">
+            </label>
+            <button class="btn-subscribe" type="submit">
+            Subscribe
+            <svg class="sub-icon" width="24" height="24">
+              <use href="./images/sptite/icons.svg#icon-Frame-3"></use>
+            </svg>
+          </button> 
+          </form>
+        </div>
       </div>
     </div>
     <div class="backdrop is-hidden" data-modal>
@@ -458,8 +472,60 @@
         <button class="modal-close-btn" data-modal-close type="button">
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/sptite/icons.svg#icon-modal-close"></use>
-          </svg>
+          </svg>         
         </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <label class="modal-form-field">
+            <span class="modal-form-field-desc">Name</span>
+            <span class="modal-form-field-wrapper">
+              <input class="modal-form-input" id="user-name" name="user-name" type="text" required pattern>
+              <svg class="modal-form-input-icon" width="18" height="24">
+                <use href="./images/sptite/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-field-desc">Phone</span>
+            <span class="modal-form-field-wrapper">
+              <input class="modal-form-input" id="user-phone" name="user-phone" type="tel" title="xxx-xxx-xx-xx" required >
+              <svg class="modal-form-input-icon" width="18" height="24">
+                <use href="./images/sptite/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-field-desc">Email</span>
+            <span class="modal-form-field-wrapper">
+              <input class="modal-form-input" id="user-email" name="user-email" type="email" required pattern>
+              <svg class="modal-form-input-icon" width="18" height="24">
+                <use href="./images/sptite/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-field-desc">Comment</span>
+            <span class="modal-form-field-wrapper">
+              <textarea
+              class="modal-form-field-massage"
+              id="user_massage"
+              name="user_massage"
+              placeholder="Text input"
+            ></textarea>
+            </span>
+          </label>
+          <div class="checkbox-topic">
+            <label class="modal-form-check-desc" for="user-policy">
+              <input class="modal-form-check" name="user-policy" id="user-policy" type="checkbox">
+              <span class="checkbox-icon"></span>
+                I accept the terms and conditions of the&nbsp
+                <a class="link-policy" href>Privacy Policy</a>
+            </label>
+          </div>
+          <button class="modal-form-btn" type="submit">Send</button>
+
+
+        </form>
       </div>
     </div>
 
