--- a/index.html
+++ b/index.html
@@ -451,84 +451,119 @@
             </li>
           </ul>
         </div>
+
         <div class="subscribe">
           <p class="subscribe-title">Subscribe</p>
           <form class="form-subscribe" autocomplete="off">
             <label>
-              <input class="subscribe-input" name="E-mail"  placeholder="E-mail" type="email">
+              <input
+                class="subscribe-input"
+                name="E-mail"
+                type="email"
+                placeholder="E-mail"
+              />
             </label>
+
             <button class="btn-subscribe" type="submit">
-            Subscribe
-            <svg class="sub-icon" width="24" height="24">
-              <use href="./images/sptite/icons.svg#icon-Frame-3"></use>
-            </svg>
-          </button> 
+              Subscribe
+              <svg class="sub-icon" width="24" height="24">
+                <use href="./images/sptite/icons.svg#icon-plain"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
     </div>
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-btn" data-modal-close type="button">
-          <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/sptite/icons.svg#icon-modal-close"></use>
-          </svg>         
-        </button>
+            <svg class="modal-close-icon" width="8" height="8">
+              <use href="./images/sptite/icons.svg#icon-modal-close"></use>
+            </svg>
+          </button>
+        
         <p class="modal-title">Leave your contacts and we will call you back</p>
+
         <form class="modal-form">
           <label class="modal-form-field">
-            <span class="modal-form-field-desc">Name</span>
-            <span class="modal-form-field-wrapper">
-              <input class="modal-form-input" id="user-name" name="user-name" type="text" required pattern>
+            <span class="modal-form-input-desc"> Name</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                class="modal-form-input"
+                id="user_name"
+                name="user_name"
+                type="text"
+                required
+                pattern
+              />
               <svg class="modal-form-input-icon" width="18" height="24">
-                <use href="./images/sptite/icons.svg#icon-person-black-18dp-1"></use>
+                <use href="./images/sptite/icons.svg#icon-person-black"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc"> Phone</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                class="modal-form-input"
+                id="user_phone"
+                name="user_phone"
+                type="tel"
+                title="xxx-xxx-xx-xx"
+                required
+              />
+              <svg class="modal-form-input-icon" width="18" height="24">
+                <use href="./images/sptite/icons.svg#icon-phone-black"></use>
               </svg>
             </span>
           </label>
           <label class="modal-form-field">
-            <span class="modal-form-field-desc">Phone</span>
-            <span class="modal-form-field-wrapper">
-              <input class="modal-form-input" id="user-phone" name="user-phone" type="tel" title="xxx-xxx-xx-xx" required >
+            <span class="modal-form-input-desc"> Email</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                class="modal-form-input"
+                id="user-email"
+                name="user-email"
+                type="email"
+              />
               <svg class="modal-form-input-icon" width="18" height="24">
-                <use href="./images/sptite/icons.svg#icon-phone-black-18dp-1"></use>
+                <use href="./images/sptite/icons.svg#icon-email-black"></use>
               </svg>
             </span>
           </label>
           <label class="modal-form-field">
-            <span class="modal-form-field-desc">Email</span>
-            <span class="modal-form-field-wrapper">
-              <input class="modal-form-input" id="user-email" name="user-email" type="email" required pattern>
-              <svg class="modal-form-input-icon" width="18" height="24">
-                <use href="./images/sptite/icons.svg#icon-email-black-18dp-1"></use>
-              </svg>
-            </span>
-          </label>
-          <label class="modal-form-field">
-            <span class="modal-form-field-desc">Comment</span>
-            <span class="modal-form-field-wrapper">
-              <textarea
-              class="modal-form-field-massage"
+            <span class="modal-form-input-desc"> Comment </span>
+            <textarea
+              class="modal-form-massage"
               id="user_massage"
               name="user_massage"
               placeholder="Text input"
             ></textarea>
-            </span>
           </label>
-          <div class="checkbox-topic">
-            <label class="modal-form-check-desc" for="user-policy">
-              <input class="modal-form-check" name="user-policy" id="user-policy" type="checkbox">
+          <div class="ckeckbox-topic">
+            <label class="modal-form-check-desc" for="user-policy"
+              ><input
+                class="modal-form-check"
+                id="user-policy"
+                name="user-policy"
+                type="checkbox"
+              />
               <span class="checkbox-icon"></span>
-                I accept the terms and conditions of the&nbsp
-                <a class="link-policy" href>Privacy Policy</a>
+              I accept the terms and conditions of the&nbsp;
+              <a class="link-policy" href="">Privacy Policy</a>
             </label>
           </div>
           <button class="modal-form-btn" type="submit">Send</button>
-
-
         </form>
       </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/inputmask@5.0.7/dist/jquery.inputmask.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@4.0.0-beta.0/lib/bodyScrollLock.min.js"></script>
+    <script src="./js/phone-mask.js"></script>
+    <script src="./js/header.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
